--- a/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
+++ b/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
@@ -48,7 +48,12 @@
   <ItemGroup>
     <Compile Include="Contexto\ProjetoModeloContext.cs" />
     <Compile Include="EntityConfig\ClienteConfiguration.cs" />
+    <Compile Include="EntityConfig\PaisConfiguration.cs" />
     <Compile Include="EntityConfig\ProdutoConfiguration.cs" />
+    <Compile Include="Migrations\201804141500130_Pais.cs" />
+    <Compile Include="Migrations\201804141500130_Pais.Designer.cs">
+      <DependentUpon>201804141500130_Pais.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClienteRepository.cs" />
@@ -61,10 +66,14 @@
       <Name>PrismaWEB.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201804141500130_Pais.resx">
+      <DependentUpon>201804141500130_Pais.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
