--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /PrismaWEB.Infra.Data/obj/Debug
 /PrismaWEB.MVC/bin
 /PrismaWEB.MVC/obj/Debug
+/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj.user
