--- a/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
+++ b/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
@@ -63,9 +63,23 @@
     <Compile Include="Migrations\201804172107237_Pais1.Designer.cs">
       <DependentUpon>201804172107237_Pais1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804172134024_Cliente.cs" />
+    <Compile Include="Migrations\201804172134024_Cliente.Designer.cs">
+      <DependentUpon>201804172134024_Cliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804180125235_Pessoa.cs" />
+    <Compile Include="Migrations\201804180125235_Pessoa.Designer.cs">
+      <DependentUpon>201804180125235_Pessoa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804182211471_Pais2.cs" />
+    <Compile Include="Migrations\201804182211471_Pais2.Designer.cs">
+      <DependentUpon>201804182211471_Pais2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClienteRepository.cs" />
+    <Compile Include="Repositories\PaisRepository.cs" />
+    <Compile Include="Repositories\PessoaRepository.cs" />
     <Compile Include="Repositories\ProdutoRepository.cs" />
     <Compile Include="Repositories\RespositoryBase.cs" />
   </ItemGroup>
@@ -85,6 +99,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804172107237_Pais1.resx">
       <DependentUpon>201804172107237_Pais1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804172134024_Cliente.resx">
+      <DependentUpon>201804172134024_Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804180125235_Pessoa.resx">
+      <DependentUpon>201804180125235_Pessoa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804182211471_Pais2.resx">
+      <DependentUpon>201804182211471_Pais2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
