--- a/PrismaWEB.MVC/Web.config
+++ b/PrismaWEB.MVC/Web.config
@@ -14,8 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <connectionStrings>
-    <add name="ProjetoModeloDDD" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+  <connectionStrings>    
+    <add name="ProjetoModeloDDD" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PrismaDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />   
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
