Criado Cargo e Presidente

--- a/PrismaWEB.Application/PrismaWEB.Application.csproj
+++ b/PrismaWEB.Application/PrismaWEB.Application.csproj
@@ -40,14 +40,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppServiceBase.cs" />
+    <Compile Include="CargoAppService.cs" />
     <Compile Include="ClienteAppService.cs" />
     <Compile Include="Interface\IAppServiceBase.cs" />
+    <Compile Include="Interface\ICargoAppService.cs" />
     <Compile Include="Interface\IClienteAppService.cs" />
     <Compile Include="Interface\IPaisAppService.cs" />
     <Compile Include="Interface\IPessoaAppService.cs" />
+    <Compile Include="Interface\IPresidenteAppService.cs" />
     <Compile Include="Interface\IProdutoAppService.cs" />
     <Compile Include="PaisAppService.cs" />
     <Compile Include="PessoaAppService.cs" />
+    <Compile Include="PresidenteAppService.cs" />
     <Compile Include="ProdutoAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
