--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /PrismaWEB.MVC/bin
 /PrismaWEB.MVC/obj/Debug
 /PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj.user
+/PrismaWEB.Domain/PrismaWEB.Domain.csproj.user
