--- a/PrismaWEB.Domain/PrismaWEB.Domain.csproj
+++ b/PrismaWEB.Domain/PrismaWEB.Domain.csproj
@@ -48,20 +48,26 @@
     <Compile Include="Entities\Voto.cs" />
     <Compile Include="Enum\Enumeration.cs" />
     <Compile Include="Enum\TipoPessoa.cs" />
+    <Compile Include="Interfaces\Repositories\ICargoRepository.cs" />
     <Compile Include="Interfaces\Repositories\IClienteRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPaisRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPessoaRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IPresidenteRepository.cs" />
     <Compile Include="Interfaces\Repositories\IProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Services\ICargoService.cs" />
     <Compile Include="Interfaces\Services\IClienteService.cs" />
     <Compile Include="Interfaces\Services\IPaisService.cs" />
     <Compile Include="Interfaces\Services\IPessoaService.cs" />
+    <Compile Include="Interfaces\Services\IPresidenteService.cs" />
     <Compile Include="Interfaces\Services\IProdutoService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CargoService.cs" />
     <Compile Include="Services\ClienteService.cs" />
     <Compile Include="Services\PaisService.cs" />
     <Compile Include="Services\PessoaService.cs" />
+    <Compile Include="Services\PresidenteService.cs" />
     <Compile Include="Services\ProdutoService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
