--- a/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
+++ b/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contexto\ProjetoModeloContext.cs" />
+    <Compile Include="EntityConfig\CargoConfiguration.cs" />
     <Compile Include="EntityConfig\ClienteConfiguration.cs" />
     <Compile Include="EntityConfig\LeiConfiguration.cs" />
     <Compile Include="EntityConfig\PaisConfiguration.cs" />
@@ -59,11 +60,17 @@
     <Compile Include="Migrations\201804211239048_Inicial.Designer.cs">
       <DependentUpon>201804211239048_Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804232322369_Cargo.cs" />
+    <Compile Include="Migrations\201804232322369_Cargo.Designer.cs">
+      <DependentUpon>201804232322369_Cargo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CargoRepository.cs" />
     <Compile Include="Repositories\ClienteRepository.cs" />
     <Compile Include="Repositories\PaisRepository.cs" />
     <Compile Include="Repositories\PessoaRepository.cs" />
+    <Compile Include="Repositories\PresidenteRepository.cs" />
     <Compile Include="Repositories\ProdutoRepository.cs" />
     <Compile Include="Repositories\RespositoryBase.cs" />
   </ItemGroup>
@@ -80,6 +87,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804211239048_Inicial.resx">
       <DependentUpon>201804211239048_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804232322369_Cargo.resx">
+      <DependentUpon>201804232322369_Cargo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
