--- a/PrismaWEB.Application/PrismaWEB.Application.csproj
+++ b/PrismaWEB.Application/PrismaWEB.Application.csproj
@@ -45,10 +45,12 @@
     <Compile Include="Interface\IAppServiceBase.cs" />
     <Compile Include="Interface\ICargoAppService.cs" />
     <Compile Include="Interface\IClienteAppService.cs" />
+    <Compile Include="Interface\ILeiAppService.cs" />
     <Compile Include="Interface\IPaisAppService.cs" />
     <Compile Include="Interface\IPessoaAppService.cs" />
     <Compile Include="Interface\IPresidenteAppService.cs" />
     <Compile Include="Interface\IProdutoAppService.cs" />
+    <Compile Include="LeiAppService.cs" />
     <Compile Include="PaisAppService.cs" />
     <Compile Include="PessoaAppService.cs" />
     <Compile Include="PresidenteAppService.cs" />
