--- a/PrismaWEB.Domain/PrismaWEB.Domain.csproj
+++ b/PrismaWEB.Domain/PrismaWEB.Domain.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Enum\TipoPessoa.cs" />
     <Compile Include="Interfaces\Repositories\ICargoRepository.cs" />
     <Compile Include="Interfaces\Repositories\IClienteRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ILeiRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPaisRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPessoaRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPresidenteRepository.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
     <Compile Include="Interfaces\Services\ICargoService.cs" />
     <Compile Include="Interfaces\Services\IClienteService.cs" />
+    <Compile Include="Interfaces\Services\ILeiService.cs" />
     <Compile Include="Interfaces\Services\IPaisService.cs" />
     <Compile Include="Interfaces\Services\IPessoaService.cs" />
     <Compile Include="Interfaces\Services\IPresidenteService.cs" />
@@ -65,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CargoService.cs" />
     <Compile Include="Services\ClienteService.cs" />
+    <Compile Include="Services\LeiService.cs" />
     <Compile Include="Services\PaisService.cs" />
     <Compile Include="Services\PessoaService.cs" />
     <Compile Include="Services\PresidenteService.cs" />
