--- a/PrismaWEB.MVC/PrismaWEB.MVC.csproj
+++ b/PrismaWEB.MVC/PrismaWEB.MVC.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Controllers\CargosController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LeisController.cs" />
     <Compile Include="Controllers\PaisController.cs" />
     <Compile Include="Controllers\CandidatoController.cs" />
     <Compile Include="Controllers\PresidentesController.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CargoViewModel.cs" />
     <Compile Include="ViewModels\ClienteViewModel.cs" />
+    <Compile Include="ViewModels\LeiViewModel.cs" />
     <Compile Include="ViewModels\PaisViewModel.cs" />
     <Compile Include="ViewModels\CandidatoViewModel.cs" />
     <Compile Include="ViewModels\PresidenteViewModel.cs" />
@@ -208,6 +210,8 @@
     <Content Include="Views\Candidato\Index.cshtml" />
     <Content Include="Views\Candidato\Create.cshtml" />
     <Content Include="Views\Cargos\Create.cshtml" />
+    <Content Include="Views\Leis\Index.cshtml" />
+    <Content Include="Views\Leis\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
