--- a/PrismaWEB.Domain/PrismaWEB.Domain.csproj
+++ b/PrismaWEB.Domain/PrismaWEB.Domain.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Attribute\VisivelViewAttribute.cs" />
     <Compile Include="Entities\Bairro.cs" />
     <Compile Include="Entities\Candidatocargos.cs" />
     <Compile Include="Entities\Cargo.cs" />
