--- a/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
+++ b/PrismaWEB.Infra.Data/PrismaWEB.Infra.Data.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Migrations\201804211239048_Inicial.Designer.cs">
       <DependentUpon>201804211239048_Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804291325368_Inicial1.cs" />
+    <Compile Include="Migrations\201804291325368_Inicial1.Designer.cs">
+      <DependentUpon>201804291325368_Inicial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CargoRepository.cs" />
@@ -83,6 +87,13 @@
     <EmbeddedResource Include="Migrations\201804211239048_Inicial.resx">
       <DependentUpon>201804211239048_Inicial.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804291325368_Inicial1.resx">
+      <DependentUpon>201804291325368_Inicial1.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
