--- a/PrismaWEB.MVC/PrismaWEB.MVC.csproj
+++ b/PrismaWEB.MVC/PrismaWEB.MVC.csproj
@@ -154,6 +154,7 @@
     <Compile Include="ViewModels\CandidatoViewModel.cs" />
     <Compile Include="ViewModels\PresidenteViewModel.cs" />
     <Compile Include="ViewModels\ProdutoViewModel.cs" />
+    <Compile Include="ViewModels\ValidationAttribute\CpfAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
