--- a/PrismaWEB.Domain/PrismaWEB.Domain.csproj
+++ b/PrismaWEB.Domain/PrismaWEB.Domain.csproj
@@ -30,7 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Attribute\VisivelViewAttribute.cs" />
     <Compile Include="Entities\Bairro.cs" />
     <Compile Include="Entities\Candidatocargos.cs" />
     <Compile Include="Entities\Cargo.cs" />
@@ -39,7 +38,6 @@
     <Compile Include="Entities\Estado.cs" />
     <Compile Include="Entities\Favorito.cs" />
     <Compile Include="Entities\Lei.cs" />
-    <Compile Include="Entities\Leiss.cs" />
     <Compile Include="Entities\Logradouro.cs" />
     <Compile Include="Entities\Pais.cs" />
     <Compile Include="Entities\Pessoa.cs" />
@@ -88,6 +86,9 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attribute\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
