.ignore adicionado intens

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 /PrismaWEB.Domain/PrismaWEB.Domain.csproj.user
 /PrismaWEB.Application/PrismaWEB.Application.csproj.user
 /PrismaWEB.MVC/PrismaWEB.MVC.csproj.user
+/PrismaWEB.Infra.Data/obj/Release
+/PrismaWEB.Infra.Data/bin/Release
+/PrismaWEB.MVC/obj/Release
+/PrismaWEB.Domain/bin/Release
+/PrismaWEB.Domain/obj/Release
+/PrismaWEB.Application/obj/Release
+/PrismaWEB.Application/bin/Release
