Adicionado receptor de chamados rest

--- a/PrismaWEB.MVC/PrismaWEB.MVC.csproj
+++ b/PrismaWEB.MVC/PrismaWEB.MVC.csproj
@@ -132,6 +132,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Rest\Controllers\CargosRestController.cs" />
+    <Compile Include="Areas\Rest\RestAreaRegistration.cs" />
     <Compile Include="AutoMapper\AutoMapperConfig.cs" />
     <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
@@ -167,6 +169,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Areas\Rest\Views\web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -179,7 +182,6 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Views\Cargos\Index.cshtml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -212,13 +214,16 @@
     <Content Include="Views\Pais\Create.cshtml" />
     <Content Include="Views\Candidato\Index.cshtml" />
     <Content Include="Views\Candidato\Create.cshtml" />
-    <Content Include="Views\Cargos\Create.cshtml" />
     <Content Include="Views\Leis\Index.cshtml" />
     <Content Include="Views\Leis\Edit.cshtml" />
     <Content Include="Views\Leis\Create.cshtml" />
+    <Content Include="Views\Cargos\Create.cshtml" />
+    <Content Include="Views\Cargos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Rest\Models\" />
+    <Folder Include="Areas\Rest\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
